--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ header h1 {
 
 header a {
     text-decoration: none;
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 header nav ul {
@@ -89,8 +89,12 @@ body {
     height: 600px;
 }
 
-.hero h2 {
-    border-color: rgba(0, 0, 0, 0);
+.hero h2 a {
+    text-decoration: none;
+    font-size: 30px;
+    color: var(--primary-color);
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    border-color: rgba(255, 255, 255, 0);
 }
 
 /* ABOUT ME SECTION STYLING */
@@ -100,10 +104,10 @@ body {
 }
 
 .about-me-body img {
-    float: left;
-    padding-right: 15px;
-    width: 25%;
-    height: auto;
+    float:left;
+    border-radius: 4px;
+    padding-right: 20px;
+    width: 300px;
 }
 
 .about-me p {
@@ -127,12 +131,10 @@ body {
     display: grid;
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(1, auto);
-    gap: 5em;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    border-top: 5px solid var(--primary-color);
-    border-bottom: 8px solid var(--primary-color);
-
+    gap: 2.5em;
+    padding: 50px;
+    border-top: 7px solid var(--primary-color);
+    border-bottom: 7px solid var(--primary-color);
 }
 
 .work-grid-container a{
@@ -143,10 +145,12 @@ body {
     color: white;
 }
 
+
 .work-grid-wrapper {
     display: flex;
     width: 100%;
     justify-content: center;
+    background-color: var(--tertiary-color);
 }
 
 .work-grid-container div{
@@ -173,14 +177,19 @@ body {
     object-fit: cover;
 }
 
-
+.fill:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
 
 .project-2 {
-
+    background-image: url("../images/professional-portfolio.jpg");
+    background-size: cover;
+    object-fit: cover;
 }
 
 .work-grid-item:hover {
-    cursor: pointer;
+    
 }
 /* CONTACT INFO STYLING */
 .contact-links {
@@ -228,3 +237,80 @@ body {
     font-size: 1.2rem;
 }
 
+@media screen and (max-width: 768px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
+    
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+    }
+
+    .work-grid-container {
+        align-items: center;
+        justify-content: center;
+        width: auto;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        gap: 2em;
+    }
+
+    .work-grid-container div{
+        padding: 50px;
+    }
+
+    .section-title {
+        padding-left: 20px;
+        flex: auto;
+        font-size: 30px;
+        margin-top: 30px;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    
+    }
+
+    .hero {
+        background-image: url("../images/castle.jpg");
+        background-size: cover;
+        background-position: 80%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        background-attachment: fixed;
+        height: 250px;
+    }
+
+    .contact-info ul li a {
+        padding: 10px 15px;
+        text-align: center;
+        font-weight: lighter;
+        font-size: 30px;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        color: var(--tertiary-color);
+        text-decoration: none;
+        padding-bottom: 50px;
+    }
+    .contact-info ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:space-evenly;
+        align-items: center;
+        list-style: none;
+        margin-top: 15px;
+    }
+        
+}
