food-for-you img bug fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ body {
 }
 
 .project-3 {
-    background-image: url("../images/project-1.jpg");
+    background-image: url("../images/food-for-you.jpg");
     background-size: cover;
     object-fit: cover;
 }
